--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ img {
 }
 header,footer {
  text-align: center;
- padding:30px 30px;
+ padding:30px 30px 30px 30px;
 }
 #logo img {
   max-width:25%;
